<resources>
    <string name="app_name">畅聊</string>
    <!-- label description -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_account">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="repeat_password">确认密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="error_invalid_account">用户名无效</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_incorrect_password">用户名或密码不正确</string>
    <string name="error_field_required">请求失败</string>
    <string name="error_login">登录异常</string>
    <string name="error_network">网络异常，请稍后再试</string>
    <string name="error_upload">上传失败</string>
    <string name="error_register_account">服务器不支持注册</string>
    <string name="error_diff_password">两次输入的密码不一致</string>
    <string name="error_account_with_chinese">用户名不能包含汉字</string>
    <string name="error_register_conflict">账号已注册,请返回登录</string>
    <string name="error_timeout">请求超时，请重试</string>

    <!-- nav menu left -->
    <string name="slide_menu_left_head_des">我的头像</string>
    <string name="slide_menu_left_message">我的消息</string>
    <string name="slide_menu_left_group">我的群</string>
    <string name="slide_menu_left_contact">联系人</string>
    <string name="slide_menu_left_service">我的服务</string>
    <string name="slide_menu_left_settings">系统设置</string>
    <string name="nav_service">服务</string>

    <!-- nav setting -->
    <string name="setting_change_chat_bg">更换聊天背景</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting_old_pwd_tip">请输入旧密码</string>
    <string name="setting_new_pwd_tip">请输入新密码(4~20个字)</string>
    <string name="setting_new_pwd_confirm">确认新密码</string>
    <string name="setting_pwd_min_tip">密码不能少于4个字</string>
    <string name="setting_pwd_max_tip">密码不能超过20个字</string>
    <string name="setting_pwd_empty_tip">新密码不能为空</string>
    <string name="setting_old_pwd_error">原密码输入错误</string>
    <string name="setting_old_pwd_empty">原密码不能为空</string>
    <string name="setting_pwd_confirm_error">两次密码输入的不一样</string>
    <string name="setting_change_pwd_ing">正在修改&#8230;</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_login_out_title">提示</string>
    <string name="setting_login_out_message">确定退出登录吗？</string>

    <string name="clear_no_cache">暂无缓存</string>
    <string name="clear_cache_ing">正在清除缓存&#8230;</string>
    <string name="clear_yes_cache">为您清除了%1$s缓存</string>

    <!-- profile -->
    <string name="profile_title">个人信息</string>
    <string name="profile_head">头像</string>
    <string name="profile_signature">个性签名</string>
    <string name="profile_nick">昵称</string>
    <string name="profile_account">账号</string>
    <string name="profile_telephone">手机号</string>
    <string name="profile_qq">QQ</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_modify_title">%1$s修改</string>
    <string name="profile_modify_edit_nick">%1$s/24</string>
    <string name="profile_modify_edit_telephone">%1$s/11</string>
    <string name="profile_modify_edit_qq">%1$s/10</string>
    <string name="profile_modify_tip">您还没写点啥呢</string>
    <string name="profile_modify_telephone_error">请填写正确的手机号</string>
    <string name="profile_modify_email_error">邮件格式不正确哟🙃</string>
    <string name="profile_modify_complete">修改成功</string>

    <!-- camera -->
    <string name="camera">拍照</string>
    <string name="album">相册</string>

    <!-- pull to refresh -->
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to_load_more">加载更多</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="release_to_load_more">释放加载更多</string>
    <string name="click_to_load_more">点击加载更多</string>
    <string name="no_more_data">没有更多数据了</string>

    <!-- constants -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="complete">完成</string>
    <string name="resend_message">重新发送这条消息吗?</string>
    <string name="click_one_more_exit">再点一次退出应用</string>

    <!-- create multiChatRoom -->
    <string name="create_room">创建群</string>
    <string name="create_room_hint">填写群名称 (2~10个字)</string>
    <string name="create_room_tip_min">不能少于2个字</string>
    <string name="create_room_tip_max">不能多于10个字</string>
    <string name="create_room_empty">群名不能为空</string>
    <string name="create_room_ing">正在创建&#8230;</string>
    <string name="create_room_success">创建成功</string>
    <string name="create_room_fail">创建失败</string>

    <!-- Permission -->
    <string name="permission_rationale">木有权限</string>
    <string name="camera_no_permission">无法获取相机权限，请打开相关设置开启</string>
    <string name="storage_no_permission">无法获取读写文件权限，请打开相关设置开启</string>
    <string name="contact_no_permission">无法获取通讯录权限，请打开相关设置开启</string>
    <string name="record_audio_no_permission">无法获取录音权限，请打开相关设置开启</string>
    <string name="coarse_location_no_permission">无法获取精准定位权限，请打开相关设置开启</string>
    <string name="call_phone_no_permission">无法获取打电话权限，请打开相关设置开启</string>
    <string name="internet_no_permission">无法获取因特网权限，请打开相关设置开启</string>
    <string name="camera_catch_exception">无法打开系统相机，请在权限管理中开启拍照权限</string>

    <!-- temp strings -->
    <string name="temp_name">小田一郎君</string>
    <string name="temp_position">移动研发部 android开发攻城狮</string>
    <string name="temp_account">xiaotianyilang</string>
    <string name="temp_sign">人并不是因为美丽才可爱，而是因为可爱才美丽！</string>
    <string name="temp_telephone">15617687251</string>
    <string name="temp_qq">990963457</string>
    <string name="temp_email">990963457@qq.com</string>
    <string name="temp_time">14:24</string>
    <string name="temp_message_request">Jacky 请求加好友</string>
    <string name="temp_chat_left">你好吗</string>
    <string name="temp_chat_right">我很好</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="empty_view_tip">暂无内容</string>
</resources>
