<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@mipmap/slide_message"
            android:title="@string/slide_menu_left_message" />
        <item
            android:id="@+id/nav_group"
            android:icon="@mipmap/slide_group"
            android:title="@string/slide_menu_left_group" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@mipmap/slide_contact"
            android:title="@string/slide_menu_left_contact" />
        <item
            android:id="@+id/nav_service"
            android:icon="@mipmap/slide_service"
            android:title="@string/slide_menu_left_service" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/slide_settings"
            android:title="@string/slide_menu_left_settings" />
    </group>

</menu>
