<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:hint="@string/setting_old_pwd_tip"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/text_b11_w_selector"
        android:textColorHint="@color/text_b51_w_selector"
        android:textSize="@dimen/text_size_13" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center_horizontal"
        android:hint="@string/setting_new_pwd_tip"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/text_b11_w_selector"
        android:textColorHint="@color/text_b51_w_selector"
        android:textSize="@dimen/text_size_13" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center_horizontal"
        android:hint="@string/setting_new_pwd_confirm"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/text_b11_w_selector"
        android:textColorHint="@color/text_b51_w_selector"
        android:textSize="@dimen/text_size_13" />

</LinearLayout>