<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/message_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_11"
        app:cardBackgroundColor="@color/color_w"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/space_11"
            android:paddingLeft="@dimen/space_11"
            android:paddingRight="@dimen/space_11"
            android:paddingStart="@dimen/space_11">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_6"
                android:paddingTop="@dimen/space_6">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/message_list_item_head_view"
                    android:layout_width="@dimen/img_size_50"
                    android:layout_height="@dimen/img_size_50"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@mipmap/default_head" />

                <TextView
                    android:id="@+id/message_list_item_head_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/color_w"
                    android:textSize="@dimen/text_size_15" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/space_11"
                    android:layout_marginStart="@dimen/space_11"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/message_list_item_tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="200dp"
                            android:text="@string/temp_name"
                            android:textColor="@color/color_b_11"
                            android:textSize="@dimen/text_size_15" />

                        <TextView
                            android:id="@+id/message_list_item_tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/temp_time"
                            android:textColor="@color/color_b_51"
                            android:textSize="@dimen/text_size_10" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/space_8">

                        <TextView
                            android:id="@+id/message_list_item_tv_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/temp_message_request"
                            android:textColor="@color/color_b_51"
                            android:textSize="@dimen/text_size_13" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>