<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:paddingTop="50dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@mipmap/plus_x"
            android:transitionName="loginFab"
            app:backgroundTint="#2ea67f"
            app:fabSize="normal" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvAdd"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#2ea67f"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <com.common.widget.BounceScrollView
                android:id="@+id/registerScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_42"
                        android:layout_marginTop="50dp"
                        android:text="@string/register"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="@dimen/space_42"
                        android:paddingStart="@dimen/space_42">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/etUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/prompt_account"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/space_42"
                        android:paddingStart="@dimen/space_42">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/prompt_password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/space_42"
                        android:paddingStart="@dimen/space_42">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#f0f7f4"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/etRepeatPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit_2"
                                android:hint="@string/repeat_password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#f0f7f4"
                                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                android:textSize="13sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btGo"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="@dimen/space_20"
                        android:layout_marginTop="@dimen/space_20"
                        android:background="@drawable/bt_shape_2"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/register"
                        android:textColor="#2fa881" />

                </LinearLayout>

            </com.common.widget.BounceScrollView>

        </android.support.v7.widget.CardView>
    </FrameLayout>

</RelativeLayout>
